1.0.0.77-alpha
-Spelling errors
-Added !rembit. Use '!rembit @user amount' to remove bits from a user in case of a error

1.0.0.76-alpha
-Added screen pixelation mode. In testing and may be very buggy
-Spelling fixes
-Added in a way for user to directly use a command without having to cheer bits before running a command. Using ! before a cheer will look for a command with that cost, and if it matches that cost it will run the command. If the amount doesn't match a command, than it is added to the users bits stored in the bot 
-Fixed bug with !cheer that would cause a over payment
-Fixed bug with !cheer failing to store bits a user gave for overpayment

1.0.0.75-alpha
-Added expandable menu to show normal chat commands
-Made it so if you have more spent this session than last session, the number will turn green. If it is less than last session it will turn red
-Bug fixes
-Added way to directly call commands by cheering bits with ! in front. If it matches the cost of a command it will run it, if not it will add to the user bits

1.0.0.74-alpha
-Trader menu adjustments
-Added a way to add commands in chat. Using !sbadd you can add commands as long as its a valid format. Example !sbadd chatcom 100 kp=1 kh=d(100)
-Added a way to remove commands from chat using !sbremove. Be careful with this
-Added moderator toggles for these 2 new commands as well
-Added gambling command, allowing users a chance to make more bits without spending. Use !sbgamble {amount}

1.0.0.73-alpha
-Fixed bug with toggling on or off sweatbot by chat command
-Added bonus for following
-Added bonus for subscribing
-Switched ui to dark mode
-Added connection status indicator
-Added toggle for !bitcost command
-Added economy tracking to quickly see how many bits are available for user. Updates every 15 seconds
-Fixed crash when connecting and disconnecting quickly